--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -37,10 +37,8 @@
     <button type="button" onclick="" id="create_button">Create and join new room</button>
   </div>
   <div id="bg_chatbox">
-    <div>
-      <h1>You are playing in room ${Test}</h1>
-    </div>
-    <textarea title="Chat Log" id="chatbox" readonly ></textarea>
+    <h1>You are playing in room: </h1>
+    <textarea title="Chat Log" id="chatbox" readonly></textarea>
   </div>
 </div>
 
